HighContrast: Avoid expander↔combobox interference
as per commit 4241c4bdbd652abb76a3c9fc3e1194bc606a4477

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2760,7 +2760,7 @@ row.activatable {
  *************/
 
 expander {
-  & arrow {
+  title > arrow {
     min-width: 16px;
     min-height: 16px;
     -gtk-icon-source: -gtk-icontheme('pan-end-symbolic');
